--- a/javascript/profile-package/username-picker.handlebars
+++ b/javascript/profile-package/username-picker.handlebars
@@ -1,22 +1,22 @@
 <div class="modal-header">
-    <a href="#" class="close-button close">x</a><h3>Edit basic info</h3>
+    <a href="#" class="close-button close">x</a><h3>Voeg algemene informatie toe</h3>
 </div>
 <div class="modal-body">
     <div class="notification info" style="display: none;">
-        In order to make your profile public, we need you to pick a username.
+        Voordat we jouw profiel publiek kunnen maken moet je eerst een gebruikersnaam kiezen.
     </div>
     <div class="notification error" style="display: none;">
-        If you change your username, you cannot get your old one back for 120 days.
+        Als je jouw gebruikersnaam verandert kun je deze gedurende 120 dagen niet terug veranderen naar je oude gebruikersnaam.
     </div>
     <div class="username-picker">
         <div class="row nickname-row">
             <div class="labels">
-                <label for="nickname">Real Name:</label>
+                <label for="nickname">Naam:</label>
             </div>
             <div class="inputs">
                 <input type="text" value="{{nickname}}" class="nickname" id="nickname"><span class="sidenote"></span>
                 <p class="input-description">
-                    This is how your name will appear around Khan Academy, and how your friends and coaches will recognize you.
+                    Dit is hoe jouw naam zal verschijnen op Khan Academie en hoe jouw vrienden en coaches je kunnen herkennen.
                 </p>
             </div>
         </div>
@@ -27,7 +27,7 @@
             <div class="inputs">
                 <input type="text" value="{{username}}" class="username" id="username"><span class="sidenote"></span>
                 <p class="input-description">
-                    Your username will appear in your Khan Academy address.
+                    Jouw gebruikersnaam zal verschijnen in jou Khan Academie adres.
                 </p>
                 <p class="input-description">
                     http://www.khanacademy.org/profile/<span class="example-username">{{username}}</span>
