Teachter Toolkit first 3

--- a/templates/coach_resources/toolkit_content/ka-classrooms.html
+++ b/templates/coach_resources/toolkit_content/ka-classrooms.html
@@ -2,52 +2,52 @@
 
 {% block col1content %}
 		
-	<h1>Why Khan Academy?</h1>
+	<h1>Waarom Khan Academie?</h1>
 	<hr>
 	
-	<p class="lead">Khan Academy can help you create an engaging, dynamic classroom that meets the needs of every student.</p>
+	<p class="lead">Khan Academie kan je helpen een boeiend, dynamisch klaslokaal te creëren dat voorziet in de behoeften van elke leerling.</p>
 	
 
-        <p><h3>Exercises and videos</h3></p>
+        <p><h3>Oefeningen en video's</h3></p>
         <p class="has-media"><span class="toolkit-media"><a href="/exercise/derivative_intuition"><img width="80%" src="/images/splashthumbnails/exercises/ex1.png" /></a></span>
 		<ul class="bullet">
-		<li>KA generates an <strong>unlimited number of random questions</strong> for students to practice topics from arithmetic through calculus. Students get automatic feedback and hints for each problem, and the system keeps track of students' progress, so you don't have to grade homework</li>
-		<li>Since problems are randomly generated, <strong>students can't copy each other's homework</strong></li>
-		<li>With KA's 3000+ videos and 300+ exercises, students can move ahead or relearn earlier concepts <strong>at their own pace</strong></li>
+		<li>KA genereert een <strong>onbeperkt aantal willekeurige vragen</strong> in diverse onderwerpen, variërend van optellen/aftrekken tot logaritmen. Leerlingen kunnen bij elk probleem feedback en hints krijgen. Het systeem houdt de vorderingen van leerlingen bij, zodat jij geen huiswerk meer hoeft na te kijken.</li>
+		<li>Omdat omgaven willekeurig gekozen worden, <strong>kunnen leerlingen hun huiswerk niet kopiëren.</strong></li>
+		<li>Khan Academie heeft op dit moment 300 Nederlandstalige oefeningen en video's, leerlingen kunnen <strong>in hun eigen tempo</strong> de stof tot zich nemen of opgaven nogmaals bekijken.</li>
 	</ul>
 		
         <p><h3>Data</h3></p>
         <p class="has-media"><span class="toolkit-media"><iframe width="100%" height="200" src="http://www.youtube.com/embed/DLt6mMQH1OY" frameborder="0" allowfullscreen></iframe></span><p>
 		<ul class="bullet">
-		<li>All student data is available to all coaches (teachers, parents, tutors) in real time</li>
-		<li>Data reports are easy to read and allow you to survey class-wide trends and deep dive into individual students’ struggles and successes</li>
-		<li>Knowing exactly how each student is doing allows you to <strong>spend your time with the students who need your help most</strong></li>
+		<li>Alle data is beschikbaar voor alle coaches(leraren, ouders, mentoren) op elk moment.</li>
+		<li>Alle data is gemakkelijk in te zien. Bekijk de voortgang van de klas of bekijk per individu waar problemen optreden. Er is gemakkelijk in te zien wie waar hulp nodig heeft en welke studenten al verder zijn.</li>
+		<li>Doordat precies bekend is welke student hulp nodig heeft is het mogelijk om deze studenten de<strong> aandacht te geven die ze nodig hebben.</strong></li>
 	</ul>
 		
-        <p><h3>Student autonomy</h3></p>
+        <p><h3>Keuzevrijheid voor de leerling</h3></p>
 		<ul class="bullet">
-		<li>Content on KA is never restricted from anyone, so students always have the autonomy to explore topics about which they are curious</li>
-		<li>This freedom enables students to choose and tackle concepts they may not have been exposed to in the past, which often makes them <strong>more engaged and invested</strong></li>
+		<li>Content van de KA is altijd beschikbaar, leerlingen kunnen dus ook zelf kiezen in welk onderdeel zij zich verder willen verdiepen.</li>
+		<li>Dankzij deze vrijheid worden leerlingen in staat gesteld om onderwerpen te kiezen waaraan zij in het verleden niet zijn blootgesteld. Hierdoor zijn leerlingen <strong>meer betrokken bij hun eigen leerproces</strong></li>
 	</ul>	
 	
-	<h3>What challenges should I be prepared for before using KA in my classroom?</h3>
+	<h3>Op welke uitdagingen moet ik voorbereid zijn voordat ik Khan Academie in mijn klas kan gebruiken?</h3>
         <p class="has-media"><span class="toolkit-media"><iframe width="100%" height="200" src="http://www.youtube.com/embed/RoGgxrCsCEQ" frameborder="0" allowfullscreen></iframe></span><p>
-	<p>With KA, students can learn at their own pace, but you'll probably need extra prep time, and you may get a bit overwhelmed at the beginning.</p>
-		<p><strong>Prep time</strong>: At first, you may need more prep time to review KA data and to adjust your planning accordingly. One upside? You don't need to create minute-by-minute lesson plans because Khan Academy can keep your students engaged regardless of their level in math.</p>
-		<p><strong>Data</strong>: While the data available in KA is a big plus (and the key to making this all work), it can be overwhelming to have so much data at your fingertips. Teachers who've used KA successfully recommend investing some time upfront to get familiar with the data so that you're able to take advantage of it. <a href="using-data">Find out more</a>.</p>
-		<p><strong>Chaos</strong>: Dynamic classrooms are exciting and energetic, with each student working on content appropriate to him or her. While it's powerful to have a small group seminar, peer tutoring, individual work, and projects happening simultaneously, it can also feel chaotic at first. You may want to ease your way in by starting with individual work and small groups, then introducing peer tutoring and projects. The chaos is much easier to embrace when you realize that each student is engaged and truly learning.</p>
+	<p>Met KA kunnen leerlingen in hun eigen tempo werken. Dit kan echter leiden tot extra voorbereidingstijd, waardoor je in het begin een beetje overdonderd kan worden.</p>
+		<p><strong>Voorbereidingstijd</strong>: In het begin heb je waarschijnlijk wat extra tijd nodig om de data te overzien en je planning hierop aan te passen. Een voordeel? Je hebt geen uitgebreide lesvoorbereiding meer nodigen zodra je iets meer ervaren raakt met het systeem zal het je zelfs tijd besparen.</p>
+		<p><strong>Data</strong>: De data die aanwezig is in KA is een groot voordeel. In het begin kan de hoeveelheid beschikbare data zelfs een beetje overweldigend zijn. Besteed daarom van tevoren voldoende tijd om uit te vinden waar alles te vinden is. Dit zal je op den duur tijd schelen. <a href="using-data">Lees hier meer over</a>.</p>
+		<p><strong>Chaos</strong>: Dynamische klassen zijn spannend en energiek. Elke leerling werkt aan onderwerpen die relevant is voor hem of haar. Het werken met kleine groepen, een een-op-een benadering of individuele projecten kan chaotisch voelen. Het is daarom aan te raden deze stappen een voor een te introduceren. Begin met individueel werken, dan in kleine groepen, en laat dan pas studenten elkaar helpen. De chaos is veel gemakkelijker te omhelzen als je bedenkt dat elke student meer betrokken en echt aan het leren is.</p>
 		
 	
-	<p><a href="{{base_url}}/setting-up-accounts" class="call-to-action simple-button green">Next: Setting up a class →</a></p>
+	<p><a href="{{base_url}}/setting-up-accounts" class="call-to-action simple-button green">Volgende: Een klas opstarten →</a></p>
 	
 {% endblock col1content %}	
 		
 {% block col2content %}	
 <div class="callout">
-		<h3>Useful links</h3>
+		<h3>Handige links</h3>
 		<ul class="bullet">
-			<li><a href="/#watch">Watch our videos</a></li>
-			<li><a href="/exercisedashboard">Practice math with interactive exercises</a></li>
+			<li><a href="/#watch">Bekijk onze video's</a></li>
+			<li><a href="/exercisedashboard">Oefenen rekenen en wiskunde met onze oefeningen</a></li>
 		</ul>			
 </div>
 
