--- a/templates/coach_resources/toolkit_content/toolkit-sections.html
+++ b/templates/coach_resources/toolkit_content/toolkit-sections.html
@@ -2,17 +2,17 @@
 
 {% block col1content %}
 		
-	<h1>Toolkit sections</h1>
+	<h1>Toolkit onderdelen</h1>
 	<hr>
-	<p class="lead">Here's a quick description of the 5 sections of this toolkit:</p>
+	<p class="lead">Hier volgt een korte beschrijving van de vijf onderdelen van deze toolkit</p>
 	<ul class="bullet">
-		<li><strong>Choosing KA:</strong> Understand our vision for Khan Academy, identify ways to use Khan Academy, and figure out which resources are most relevant for you</li>
-		<li><strong>Getting started:</strong> Decide which classes should use Khan Academy and figure out logistics</li>
-		<li><strong>Class time:</strong> Learn about teaching practices that have worked well with Khan Academy</li>
-		<li><strong>Curriculum:</strong> Get tips on creating individualized units with Khan Academy through downloadable worksheets, and check out our Common Core Map.</li>
-		<li><strong>Other resources:</strong> Read and add to our frequently-asked questions, and see the latest news on the Schools Blog.</li>
+		<li><strong>Het kiezen voor KA:</strong> Begrijp de visie van de Khan Academie, kom erachter hoe jij Khan academie kunt gebruiken en ontdek welke middelen het meest relevant zijn voor jou.</li>
+		<li><strong>Aan de slag:</strong> Bepaal welke klassen Khan Academie kunnen gebruiken en ontdek hoe de site werkt.</li>
+		<li><strong>Klas tijd:</strong> Ontdek in welke leermethodes Khan Academie toegepast kan worden.</li>
+		<li><strong>Curriculum:</strong> Vind hier o.a. downloadbare werkbladen.</li>
+		<li><strong>Andere bronnen:</strong> Lees onze veelgestelde vragen of stel zelf een vraag. Of lees ons blog met het laatste nieuws en ervaringen van Nederlandse Khan Academie-gebruikers.</li>
 	</ul>
-	<p><a href="{{base_url}}/ka-classrooms" class="call-to-action simple-button green">Next: Why Khan Academy? →</a></p>
+	<p><a href="{{base_url}}/ka-classrooms" class="call-to-action simple-button green">Volgende: Waarom Khan Academie? →</a></p>
 	<p>
 	<p>
 	<p>
